// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addBabelPlugin transform adds babel plugin array 1`] = `
"module.exports = {
      presets: [\\"@babel/preset-typescript\\"],
      plugins: [[\\"@babel/plugin-proposal-decorators\\", {
        legacy: true
      }]],
    }"
`;

exports[`addBabelPlugin transform adds babel plugin literal 1`] = `
"module.exports = {
      presets: [\\"@babel/preset-typescript\\"],
      plugins: [\\"@emotion\\"],
    }"
`;
